test/Fail/TypeBasedTermination/BadCoinductiveConstructors.err
TypeBasedTermination/BadCoinductiveConstructors.agda:20.1-21.19: error: [TerminationIssue]
Termination checking failed for the following functions:
  foo2
Problematic calls:
  foo2
    (at TypeBasedTermination/BadCoinductiveConstructors.agda:21.15-19)
